wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  wordpress-deploy
  labels:
    app:  wordpress-deploy
spec:
  selector:
    matchLabels:
      app: wordpress-deploy
  replicas: 1
  template:
    metadata:
      labels:
        app:  wordpress-deploy
    spec:
      containers:
      - name:  wordpress-deploy
        image:  wordpress:latest 
        ports:
        - containerPort:  80

        volumeMounts:
          - name: wordpress-pv
            mountPath: /var/www/html
      volumes:
        - name: wordpress-pv
          persistentVolumeClaim:
            claimName: wordpress-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: wordpress-deploy
  type: LoadBalancer
